--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DOWNLOAD_API_URL=https://consumet-api-jkyo.onrender.com/movies/api/dramacool
 CONSUMET_API_URL=https://consumet-api-jkyo.onrender.com
 CONSUMET_API_ANILIST_URL=https://consumet-api-jkyo.onrender.com/movies/meta/anilist
 # make sure to add /meta/anilist at the end
+BASE_URL=https://www.movie-watch.com
+TMDB_API_KEY=e39d4404bc82afa196d49c77c4e4fcfa
