--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DOWNLOAD_API_URL=https://consumet-api-jkyo.onrender.com/movies/api/dramacool
+DOWNLOAD_API_URL=https://consumet-api-jkyo.onrender.com/movies/dramacool
 CONSUMET_API_URL=https://consumet-api-jkyo.onrender.com
-CONSUMET_API_ANILIST_URL=https://consumet-api-jkyo.onrender.com/movies/meta/anilist
+CONSUMET_API_ANILIST_URL=https://consumet-api-jkyo.onrender.com/meta/anilist
 # make sure to add /meta/anilist at the end
 BASE_URL=https://www.movie-watch.com
 TMDB_API_KEY=e39d4404bc82afa196d49c77c4e4fcfa
